--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
 
   assets:
       - assets/images/
+      - assets/quran3.json
+      - assets/quran2.json
+      - assets/quran.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
